<resources>
    <string name="app_name">Koukoula-FuelTrack</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fuel_track">FuelTrackActivity</string>

    <string name="date_hint"> YYYY-MM-DD</string>
    <string name="station_hint"> e.g, Costco</string>
    <string name="odometer_hint"> In KM</string>
    <string name="grade_hint"> e.g, Regular:</string>
    <string name="amount_hint"> In L</string>
    <string name="cost_hint"> In Cents/L.</string>

    <string name="date_hint_edit"> YYYY-MM-DD</string>
    <string name="station_hint_edit"> e.g, Costco</string>
    <string name="odometer_hint_edit"> In KM</string>
    <string name="grade_hint_edit"> e.g, Regular:</string>
    <string name="amount_hint_edit"> In L</string>
    <string name="cost_hint_edit"> In Cents/L.</string>

    <string name="button_send">Send</string>
    <string name="button_add">Add</string>
    <string name="button_back">Back</string>
    <string name="button_edit">Edit</string>
    <string name="button_submit">Submit</string>
    <string name="button_exit">Exit</string>
    <string name="button_clear">Clear</string>


    <string name="text_total_cost_text">Total cost of Fuel:</string>
    <string name="text_total_cost"> $0.00</string>
    <string name="title_activity_edit_log">editLogActivity</string>

</resources>
